fix(java-module): fix jlink for non-spin applications and library modules (#42)